--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-portal",
+  "name": "akordi-portal",
   "version": "0.0.1",
   "packageManager": "pnpm@9.15.2",
   "prettier": "@zzdats/prettier-config",
@@ -14,42 +14,41 @@
   },
   "dependencies": {
     "@akordi/jtab": "0.0.8",
-    "@ory/client": "^1.15.17",
+    "@ory/client": "^1.16.2",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
-    "@vueuse/core": "^12.0.0",
-    "@wntr/lx-ui": "1.8.0-beta.3",
+    "@vueuse/core": "^12.5.0",
+    "@wntr/lx-ui": "1.8.0-beta.8",
+    "@zzdats/prettier-config": "^1.0.0",
     "axios": "1.7.9",
     "chord-transposer": "^3.0.9",
-    "pinia": "^2.3.0",
+    "pinia": "^2.3.1",
     "vexchords": "^1.2.0",
     "vue": "^3.5.13",
-    "vue-i18n": "10.0.5",
-    "vue-qrcode-reader": "^5.6.0",
+    "vue-i18n": "11.0.1",
     "vue-router": "4.5.0",
     "vue3-click-away": "^1.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-airbnb": "^7.0.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-airbnb": "^8.0.0",
     "@vue/test-utils": "^2.4.6",
-    "@zzdats/prettier-config": "^1.0.0",
-    "eslint": "^8.40.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-node": "^0.3.7",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.11.1",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-vue": "^9.32.0",
     "jest": "^29.7.0",
-    "jsdom": "^25.0.1",
+    "jsdom": "^26.0.0",
     "prettier": "^3.4.2",
-    "vite": "6.0.7",
+    "vite": "6.0.11",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-mock-server": "^1.3.1",
-    "vitest": "^2.1.8"
+    "vitest": "^3.0.4"
   }
 }
