--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,25 @@
 {
-  "editor.formatOnSave": true, // false in order to avoid conflicts with editor.codeActionsOnSave -> source.fixAll.eslint
+  "editor.formatOnSave": false, // false in order to avoid conflicts with editor.codeActionsOnSave -> source.fixAll.eslint
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
     "source.fixAll.stylelint": "explicit"
   },
   "npm.packageManager": "pnpm",
   "i18n-ally.keystyle": "nested",
-  "i18n-ally.localesPaths": ["src/locales"],
+  "i18n-ally.localesPaths": [
+    "src/locales"
+  ],
   "eslint.format.enable": true,
-  "eslint.validate": ["javascript"],
-  "cSpell.words": ["akordi", "axios", "wntr"]
+  "eslint.validate": [
+    "javascript"
+  ],
+  "cSpell.dictionaryDefinitions": [
+    {
+      "name": "zzdats",
+      "path": "${workspaceFolder}/.vscode/worldlist/zzdats.txt"
+    }
+  ],
+  "cSpell.dictionaries": [
+    "zzdats"
+  ]
 }
