--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test-watch": "vitest"
   },
   "dependencies": {
+    "@ory/client": "^1.16.6",
     "@akordi/jtab": "0.0.8",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
