Trying out google analytics

--- a/package.json
+++ b/package.json
@@ -13,26 +13,27 @@
     "test-watch": "vitest"
   },
   "dependencies": {
-    "@ory/client": "^1.16.6",
     "@akordi/jtab": "0.0.8",
+    "@ory/client": "^1.16.7",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
-    "@vueuse/core": "^12.5.0",
-    "@wntr/lx-ui": "1.8.0-beta.10",
+    "@vueuse/core": "^12.7.0",
+    "@wntr/lx-ui": "1.8.0-beta.11",
     "@zzdats/prettier-config": "^1.0.0",
     "axios": "1.7.9",
     "chord-transposer": "^3.0.9",
     "pinia": "^2.3.1",
     "vexchords": "^1.2.0",
     "vue": "^3.5.13",
-    "vue-i18n": "11.1.0",
+    "vue-gtag": "^2.1.0",
+    "vue-i18n": "11.1.1",
     "vue-router": "4.5.0",
     "vue3-click-away": "^1.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-airbnb": "^8.0.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -44,7 +45,7 @@
     "eslint-plugin-vue": "^9.27.0",
     "jest": "^29.7.0",
     "jsdom": "^26.0.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.1",
     "vite": "6.1.0",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.6",
