--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ SERVICE_URL=http://localhost:8080/api/
 AUTH_URL=http://localhost:4433/
 ENVIRONMENT=development
 PUBLIC_URL=http://localhost:44341/
+GTAG_ENABLED=false
+GTAG_ID='G-DSGMXRC1GP'
