--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -28,7 +28,7 @@ server {
     }
 
     location /api/v2 {
-            proxy_pass https://www.akordi.lv/api/v2;
+            proxy_pass https://akordi-api-go.azurewebsites.net/api/v2;
             proxy_ssl_server_name on;
             proxy_set_header    X-Real-IP       $remote_addr;
             proxy_set_header    X-Forwarded-for $remote_addr;
@@ -40,7 +40,7 @@ server {
     }
 
     location /api/search {
-            proxy_pass https://www.akordi.lv/api/search;
+            proxy_pass https://ambitious-grass-0e78f4303.2.azurestaticapps.net/api/search;
             proxy_ssl_server_name on;
             proxy_set_header    X-Real-IP       $remote_addr;
             proxy_set_header    X-Forwarded-for $remote_addr;
