--- a/docker/default.conf.template
+++ b/docker/default.conf.template
@@ -27,6 +27,19 @@ server {
         add_header Feature-Policy "autoplay 'none';" always;
     }
 
+    location /api/v2/admin {
+            proxy_pass ${API_V2_ADMIN_URL};
+            proxy_ssl_server_name on;
+            proxy_set_header    X-Real-IP       $remote_addr;
+            proxy_set_header    X-Forwarded-for $remote_addr;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            port_in_redirect off;
+            proxy_connect_timeout 30;
+    }
+
+
     location /api/v2 {
             proxy_pass ${API_V2_URL};
             proxy_ssl_server_name on;
