--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^12.7.0",
     "@wntr/lx-ui": "1.8.0-beta.12",
     "@zzdats/prettier-config": "^1.0.0",
+    "abcjs": "^6.4.4",
     "axios": "1.7.9",
     "chord-transposer": "^3.0.9",
     "pinia": "^2.3.1",
