--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   },
   "dependencies": {
     "@akordi/jtab": "0.0.8",
-    "@ory/client": "^1.18.5",
+    "@ory/client": "^1.19.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^12.7.0",
-    "@wntr/lx-ui": "1.8.0-beta.15",
+    "@wntr/lx-ui": "1.8.0",
     "@zzdats/prettier-config": "^1.0.0",
     "abcjs": "^6.4.4",
-    "axios": "1.8.3",
+    "axios": "1.8.4",
     "chord-transposer": "^3.0.9",
     "pinia": "^2.3.1",
     "vexchords": "^1.2.0",
@@ -32,7 +32,7 @@
     "vue3-click-away": "^1.2.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-airbnb": "^8.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.6",
@@ -47,10 +47,10 @@
     "jest": "^29.7.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
-    "vite": "6.2.2",
+    "vite": "6.2.3",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-mock-server": "^1.3.1",
-    "vitest": "^3.0.8"
+    "vitest": "^3.0.9"
   }
 }
