Upgrade libs and vue-gtag. Adjust theme.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,9 @@
 packages:
-  # if required, exclude some directories
   - '!**/test/**'
+onlyBuiltDependencies:
+  - '@wntr/lx-ui'
+  - canvas
+  - core-js-pure
+  - esbuild
+  - exifreader
+  - vue-demi
