--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,7 +26,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [23.11.0]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
