--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "akordi-portal",
   "version": "0.0.1",
-  "packageManager": "pnpm@9.15.2",
+  "packageManager": "pnpm@10.7.1",
   "prettier": "@zzdats/prettier-config",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
@@ -14,11 +14,11 @@
   },
   "dependencies": {
     "@akordi/jtab": "0.0.8",
-    "@ory/client": "^1.19.0",
+    "@ory/client": "^1.20.3",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^12.7.0",
-    "@wntr/lx-ui": "1.8.0",
+    "@wntr/lx-ui": "1.9.0-beta.1",
     "@zzdats/prettier-config": "^1.0.0",
     "abcjs": "^6.4.4",
     "axios": "1.8.4",
@@ -26,8 +26,8 @@
     "pinia": "^2.3.1",
     "vexchords": "^1.2.0",
     "vue": "^3.5.13",
-    "vue-gtag": "2.0.1",
-    "vue-i18n": "11.1.2",
+    "vue-gtag": "3.2.0",
+    "vue-i18n": "11.1.3",
     "vue-router": "4.5.0",
     "vue3-click-away": "^1.2.4"
   },
@@ -36,21 +36,21 @@
     "@vue/eslint-config-airbnb": "^8.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^8.40.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-node": "^0.3.9",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.27.0",
+    "eslint-plugin-vue": "^9.32.0",
     "jest": "^29.7.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
-    "vite": "6.2.3",
+    "vite": "6.2.5",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-mock-server": "^1.3.1",
-    "vitest": "^3.0.9"
+    "vitest": "^3.1.1"
   }
 }
