--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^13.3.0",
-    "@wntr/lx-ui": "1.9.0-beta.12",
+    "@wntr/lx-ui": "1.9.0",
     "@zzdats/prettier-config": "^1.0.0",
     "abcjs": "^6.5.1",
-    "axios": "1.9.0",
+    "axios": "1.10.0",
     "chord-transposer": "^3.0.9",
     "pinia": "^2.3.1",
     "vexchords": "^1.2.0",
-    "vue": "^3.5.16",
+    "vue": "^3.5.17",
     "vue-gtag": "3.5.1",
-    "vue-i18n": "11.1.5",
+    "vue-i18n": "11.1.6",
     "vue-router": "4.5.1",
     "vue3-click-away": "^1.2.4"
   },
