--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue": "^3.5.21",
     "vue-gtag": "3.5.2",
     "vue-i18n": "11.1.12",
+    "@vueuse/head": "^2.0.0",
     "vue-router": "4.5.1",
     "vue3-click-away": "^1.2.4"
   },
