--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^13.3.0",
-    "@wntr/lx-ui": "1.10.0-beta.13",
+    "@wntr/lx-ui": "1.10.0",
     "@zzdats/prettier-config": "^1.0.0",
     "abcjs": "^6.5.2",
     "axios": "1.12.2",
     "chord-transposer": "^3.0.9",
     "pinia": "^2.3.1",
     "vexchords": "^1.2.0",
-    "vue": "^3.5.21",
+    "vue": "^3.5.22",
     "vue-gtag": "3.6.1",
     "vue-i18n": "11.1.12",
     "@vueuse/head": "^2.0.0",
@@ -48,7 +48,7 @@
     "jest": "^30.1.3",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
-    "vite": "7.1.6",
+    "vite": "7.1.8",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-mock-server": "^1.3.1",
