--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -102,3 +102,69 @@ jobs:
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+
+  deploy-test:
+    runs-on: ubuntu-latest
+    needs: build
+    environment: test
+    if: needs.build.result == 'success' && github.event_name != 'pull_request' && github.ref_type != 'tag'
+    permissions:
+      contents: read
+    env:
+      DOCKER_IMAGE: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Get repository name
+        id: repo-name
+        uses: MariachiBear/get-repo-name-action@v1.1.0
+
+      - name: 'Portainer Deploy'
+        uses: cssnr/portainer-stack-deploy-action@v1
+        env:
+          STACK_NAME: ${{github.repository_owner}}-${{ steps.repo-name.outputs.repository-name }}
+        with:
+          url: ${{ vars.TEST_PORTAINER_URL }}
+          name: '${{ env.STACK_NAME }}'
+          type: 'file'
+          file: 'docker/stack.yml'
+          token: ${{ secrets.TEST_PORTAINER_API_KEY }}
+          merge_env: true
+          env_json: |
+            {
+              "DOCKER_IMAGE": "${{ env.DOCKER_IMAGE }}"
+            }
+
+  deploy-prod:
+    runs-on: ubuntu-latest
+    needs: build
+    environment: prod
+    if: needs.build.result == 'success' && github.event_name != 'pull_request' && github.ref_type == 'tag'
+    permissions:
+      contents: read
+    env:
+      DOCKER_IMAGE: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Get repository name
+        id: repo-name
+        uses: MariachiBear/get-repo-name-action@v1.1.0
+
+      - name: 'Portainer Deploy Prod'
+        uses: cssnr/portainer-stack-deploy-action@v1
+        env:
+          STACK_NAME: ${{github.repository_owner}}-${{ steps.repo-name.outputs.repository-name }}
+        if: github.ref_type == 'tag'
+        with:
+          url: ${{ vars.PROD_PORTAINER_URL }}
+          name: '${{ env.STACK_NAME }}'
+          type: 'file'
+          file: 'docker/stack.yml'
+          token: ${{ secrets.PROD_PORTAINER_API_KEY }}
+          merge_env: true
+          env_json: |
+            {
+              "DOCKER_IMAGE": "${{ env.DOCKER_IMAGE }}"
+            }
