--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "vue-gtag": "3.6.1",
     "vue-i18n": "11.1.12",
     "@vueuse/head": "^2.0.0",
-    "vue-router": "4.5.1",
-    "vue3-click-away": "^1.2.4"
+    "vue-router": "4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.4",
