--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ PUBLIC_URL=http://localhost:44341/
 GTAG_ENABLED=false
 GTAG_ID='G-DSGMXRC1GP'
 DEFAULT_LANGUAGE=lv
+APP_NAME=Akordi.lv
+APP_TITLE=Dziesmu vārdu, akordu un tabu krātuve
+APP_DESCRIPTION=Meklējiet akordus un dziesmu vārdus latviešu dziesmām un atrodiet tūkstošiem populāru dziesmu datubāzē.
