--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest --run",
-    "lint": "eslint src/",
+    "lint": "eslint src/ --ext .js,.vue --fix",
     "test-watch": "vitest"
   },
   "dependencies": {
@@ -18,39 +18,40 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^13.3.0",
-    "@wntr/lx-ui": "1.10.0",
+    "@wntr/lx-ui": "1.11.0",
     "@zzdats/prettier-config": "^1.0.0",
-    "abcjs": "^6.5.2",
+    "abcjs": "^6.6.0",
     "axios": "1.13.2",
     "chord-transposer": "^3.0.9",
     "pinia": "^3.0.4",
     "vexchords": "^1.2.0",
-    "vue": "^3.5.25",
+    "vue": "^3.5.26",
     "vue-gtag": "3.6.3",
-    "vue-i18n": "11.2.2",
+    "vue-i18n": "11.2.8",
     "@vueuse/head": "^2.0.0",
     "vue-router": "4.6.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitejs/plugin-vue": "^6.0.3",
     "@vue/eslint-config-airbnb": "^8.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.6",
+    "@zzdats/prettier-config": "^1.0.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.32.0",
     "jest": "^30.2.0",
     "jsdom": "^27.3.0",
-    "prettier": "^3.7.4",
-    "vite": "7.2.7",
+    "prettier": "^2.8.8",
+    "vite": "7.3.1",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.9",
     "vite-plugin-mock-server": "^1.3.1",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.16"
   }
 }
