--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test-watch": "vitest"
   },
   "dependencies": {
-    "@akordi/jtab": "0.0.8",
     "@ory/client": "^1.22.15",
+    "@tombatossals/chords-db": "^0.5.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^13.3.0",
@@ -24,7 +24,6 @@
     "axios": "1.13.2",
     "chord-transposer": "^3.0.9",
     "pinia": "^3.0.4",
-    "vexchords": "^1.2.0",
     "vue": "^3.5.26",
     "vue-gtag": "3.6.3",
     "vue-i18n": "11.2.8",
