Upgrade to LX-UI 2.0

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,9 @@
 packages:
   - '!**/test/**'
+
 onlyBuiltDependencies:
-  - '@wntr/lx-ui'
+  - '@dativa-lv/lx-ui'
+  - '@dativa-lv/lx-ui'
   - canvas
   - core-js-pure
   - esbuild
