--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "test-watch": "vitest"
   },
   "dependencies": {
+    "@dativa-lv/lx-ui": "^2.0.0",
     "@ory/client": "^1.22.15",
     "@tombatossals/chords-db": "^0.5.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^13.3.0",
-    "@wntr/lx-ui": "1.11.0",
+    "@vueuse/head": "^2.0.0",
     "@zzdats/prettier-config": "^1.0.0",
     "abcjs": "^6.6.0",
     "axios": "1.13.2",
@@ -27,7 +28,6 @@
     "vue": "^3.5.26",
     "vue-gtag": "3.6.3",
     "vue-i18n": "11.2.8",
-    "@vueuse/head": "^2.0.0",
     "vue-router": "4.6.4"
   },
   "devDependencies": {
